--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # for mouse movements/click
 CONFIG_ZMK_POINTING=y
